SFDCProject/src/objects/SunRunS3Proxy_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Access_Key__c</fullName>
        <label>Access Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SunRunS3Proxy Settings</label>
</CustomObject>